@@ -1,7 +1,26 @@
 package com.atguigu.chapter17_GC;
 
+
+import java.util.ArrayList;
+
 /**
- * Created by John.Ma on 2021/5/13 0013 0:26
+ * -Xms60m -Xmx60m -XX:SurvivorRatio=8 -XX:+PrintGCDetails -Xloggc:./logs/gc.log
+ *
+ * @author shkstart  shkstart@126.com
+ * @create 2020  18:12
  */
 public class GCLogTest {
+    public static void main(String[] args) {
+        ArrayList<byte[]> list = new ArrayList<>();
+
+        for (int i = 0; i < 500; i++) {
+            byte[] arr = new byte[1024 * 100];//100KB
+            list.add(arr);
+            try {
+                Thread.sleep(50);
+            } catch (InterruptedException e) {
+                e.printStackTrace();
+            }
+        }
+    }
 }
